--- a/app.yaml
+++ b/app.yaml
@@ -1,6 +1,2 @@
-runtime: python
-vm: true
-entrypoint: gunicorn -b :$PORT main:app
-
-runtime_config:
-  python_version: 3
+runtime: python39
+env: standard
