--- a/app.yaml
+++ b/app.yaml
@@ -1,2 +1,7 @@
-runtime: python39
-env: standard
+runtime: custom
+env: flex
+
+entrypoint: uvicorn main:app --host 0.0.0.0 --port $PORT --workers 1
+
+runtime_config:
+  python_version: 3
