--- a/app.yaml
+++ b/app.yaml
@@ -1,7 +1,13 @@
-runtime: custom
-env: flex
+runtime: python39
 
-entrypoint: uvicorn main:app --host 0.0.0.0 --port $PORT --workers 1
+handlers:
+  # Serve static files from the "static" directory
+  - url: /static
+    static_dir: static
 
-runtime_config:
-  python_version: 3
+  # Handle requests to the root URL "/"
+  - url: /.*
+    script: auto
+
+env_variables:
+  PORT: 8080
