--- a/app.yaml
+++ b/app.yaml
@@ -1,9 +1,4 @@
 runtime: python39
+entrypoint: gunicorn -w 4 -k uvicorn.workers.UvicornWorker main:app
 
-env_variables:
-  MY_VAR: "my_value"
-
-handlers:
-- url: /.*
-  script: auto
 
